# streamville

./: .gitignore  Cargo.toml  README.md  justfile
assets/shaders/: bullet_material.wgsl  mouse_material.wgsl
docs/: IDEAS.md  LOG.md  STREAM.md
src/: bevy_example_animated_fox.rs  blender_cam.rs  default_plugin_extensions.rs  lib.rs  render_util.rs  world_axes_gizmo.rs
