[package]
name = "streamville"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = [
    "dynamic_linking",
    "file_watcher",
    "embedded_watcher",
    "bevy_debug_stepping",
] }
bevy-inspector-egui = "0.23.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
